# NDKCallRenderScriptDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ndk/renderscript/learn/ndkcallrenderscriptdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/: tfClass.h
app/src/main/cpp/src/: native-lib.cpp  tfClass.cpp
app/src/main/java/ndk/renderscript/learn/ndkcallrenderscriptdemo/: MainActivity.java
app/src/main/jni/: Android.mk  Application.mk  HelloComputeNDK_Jni.cpp  mono.rs
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ndk/renderscript/learn/ndkcallrenderscriptdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
